--- a/_data/firefox_releases.json
+++ b/_data/firefox_releases.json
@@ -1,15 +1,35 @@
 {
 	"releases": [
 		{
+			"version": "47",
+			"date": "2016-05-30",
+			"end": "2016-07-12"
+		},
+		{
+			"version": "46",
+			"date": "2016-04-18",
+			"end": "2016-05-30"
+		},
+		{
+			"version": "45",
+			"date": "2016-03-07",
+			"end": "2016-04-18"
+		},
+		{
+			"version": "44",
+			"date": "2016-01-26",
+			"end": "2016-03-07"
+		},
+		{
 			"version": "43",
 			"date": "2015-12-15",
 			"end": "2016-01-26"
-		},	
+		},
 			{
 			"version": "42",
 			"date": "2015-11-03",
 			"end": "2015-12-15"
-		},	
+		},
 			{
 			"version": "41",
 			"date": "2015-09-22",
