try forcing https

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ exclude:
 # site
 url: https://clarkbw.github.io
 
+# do not include protocol, just the domain
+enforce_ssl: clarkbw.github.io
+
 # metadata
 title: 18F Digital Services Delivery
 description: "18F builds effective, user-centric digital services focused on the interaction between government and the people and businesses it serves."
