--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,8 @@ exclude:
 - CONTRIBUTING.md
 
 github:
+  host: clarkbw.github.io
   url: https://clarkbw.github.io/devtools-metrics
-
-# do not include protocol, just the domain
-enforce_ssl: clarkbw.github.io
 
 # metadata
 title: 18F Digital Services Delivery
