--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,8 @@ github:
   url: https://clarkbw.github.io/devtools-metrics
 
 # metadata
-title: 18F Digital Services Delivery
-description: "18F builds effective, user-centric digital services focused on the interaction between government and the people and businesses it serves."
+title: DevTools Metrics Dashboard
+description: A Metrics Dashboard for Firefox DevTools collected using our anonymous Telemetry service.
+twitter:
+  site: "@FirefoxDevTools"
+  creator: "@clarkbw"
